# Dev-Practice

./: .gitignore
.github/: dependabot.yml
.trunk/: out  trunk.yaml
Backend/GraphQL/apollo-express mongodb/: package-lock.json  package.json  server.js
Backend/JWT-Auth/JWT-Login-Page/: package-lock.json  server.js
Backend/JWT-Login-Page/: package.json  server.js
Backend/JWT-Login-Page/models/: RefreshToken.js
Backend/JWT-Login-Page/src/: App.jsx  Login.jsx  Signup.jsx  auth.js
Backend/Mongoose-WDS/: package-lock.json  package.json  script.js
Backend/php-mysql/: index.html  script.js  server.php  styles.css
Frontend/Tailwind css/: index.html
Frontend/ToDo List (vanillajs)/: index.html  index.js
Frontend/ts/: monads.ts
Go/A tour of go/: 1.packages_variables_functions.ipynb  2.flow_control.ipynb  3.pointers_structs_slices_maps.ipynb  main.go
Go/concurrency/: go.mod  main.go
ReactJS/: importExport1.js  importExport2.js
ReactJS/1.JS Refresher/: 8.ArrayFunctions.js
ReactJS/JS Refresher/: 3.0classes.js  3.1 classesInheritance.js  4.classes,properties,methods.js  5.SpreadRest.js  6.Destructuring.js  8.1 ArrayFunc.txt  test.js
Rust/actix/: Cargo.toml
Rust/libp2p-chat/: Cargo.toml
Rust/libp2p-chat/src/: main.rs
Tailwind css/: package-lock.json  package.json
c/socket-programming/: a.out  cc  cc.c  client  client.c  server.c  temp.c  tmp
codedamn/Project1/: README.md  index.html
codedamn/Project2/: style.css
css/yt playlist/: index2.html  index4.css  index5.css  index7.css  index7.html  index8.html
js/Mosh oop/: index.js
(+472 files in other folders)
